[gd_scene load_steps=4 format=3 uid="uid://vqc6eajhvf2n"]

[ext_resource type="Script" path="res://scripts/auction_item_display.gd" id="1_m1nia"]
[ext_resource type="Texture2D" uid="uid://cm0g4qj01pt8l" path="res://assets/sprites/catfish.png" id="1_swxl0"]
[ext_resource type="FontFile" uid="uid://dq0vffuiso7gl" path="res://assets/fonts/Mx437_IBM_EGA_8x14.ttf" id="2_vjak8"]

[node name="AuctionItemDisplay" type="PanelContainer"]
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -184.5
offset_right = 1324.0
offset_bottom = 184.5
grow_vertical = 2
script = ExtResource("1_m1nia")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="ContentContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="TitleContainer" type="HBoxContainer" parent="MarginContainer/ContentContainer"]
layout_mode = 2
alignment = 1

[node name="IconTexture" type="TextureRect" parent="MarginContainer/ContentContainer/TitleContainer"]
layout_mode = 2
texture = ExtResource("1_swxl0")
expand_mode = 3

[node name="FishName" type="Label" parent="MarginContainer/ContentContainer/TitleContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vjak8")
theme_override_font_sizes/font_size = 256
text = "Catfish"

[node name="InfoContainer" type="HBoxContainer" parent="MarginContainer/ContentContainer"]
layout_mode = 2

[node name="FactLabel" type="Label" parent="MarginContainer/ContentContainer/InfoContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vjak8")
theme_override_font_sizes/font_size = 32
text = "Did you know?
Catfish don't just swim, they can walk on land, climb walls and even breath air. What a strange choice... "
autowrap_mode = 3

[node name="StatsLabel" type="Label" parent="MarginContainer/ContentContainer/InfoContainer"]
custom_minimum_size = Vector2(650, 0)
layout_mode = 2
theme_override_fonts/font = ExtResource("2_vjak8")
theme_override_font_sizes/font_size = 32
text = "Rarity: Legendary
Size: Large 
Expiration Date: 5 days
Special attributes: None"
autowrap_mode = 3
